# rero-ils

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  INSTALL.md  MANIFEST.in  README.md  babel.ini  docker-compose.full.yml  docker-services.yml  plan.md  pyproject.toml
.github/workflows/: continuous-integration-test.yml  release.yml
data/: apisources.yml  circulation_policies.json  collections.json  documents_small.json  locations.json  organisations.json  remote_entities_big.json  remote_entities_small.json  role_policies.json
docker/: wait-for-services.sh
docker/haproxy/: haproxy.cfg
docker/nginx/: nginx.conf
docker/nginx/conf.d/: default.conf
docker/postgres/: Dockerfile  init-app-db.sh
docker/uwsgi/: uwsgi_rest.ini  uwsgi_ui.ini
rero_ils/: __init__.py  accounts_views.py  celery.py  config.py  converters.py  facets.py  filter.py  permissions.py  query.py  schedulers.py  utils.py  version.py
rero_ils/alembic/: 0387b753585f_correct_subjects_bf_Organization.py  05555c03fe49_correct_holdings_items_count.py  21a994dc2beb_add_library_pid_to_ill_request_.py  2b0af71048a7_add_request_expiration_date.py  54134957af7d_loan_checkout_location_pid.py  5f0b086e4b82_patron_role_migration.py  64a5cc96f96e_update_claimed_issue_status.py  74ab9da9f078_update_patron_communication_channels.py  8145a7cdef99_reindex_items_with_invalid_ean.py  8d97be2c8ad6_items_remove_claims_count.py  90d857fb5c23_unpaid_subscription_limit.py  9e3145d88e64_move_collection_to_his_own_table.py  a710021979fe_migrate_contribution_to_entity.py  a941628259e1_add_keys_into_loan_index.py  add75cbcad66_migrate_obsolete_country_codes.py  b90f8b148948_add_column_to_selfcheck_terminals.py  bd78d77eb7e3_isfiction.py  c69ea6572971_drop_invoices_tables.py  cc7ffbe1e078_cipo_request_duration_field_creation.py  ce4923ba5286_delete_expired_items_temporary_locations.py  e3eb396b39bb_migration_ill_pickup.py  e63e5dfa2416_new_vendor_serial_contact.py  eec683a446e5_merging_rero_ils_branches.py  f0e7f3b80a21_initial.py  fc45b1b998b8_holdings_affiliated_to_libraries.py
rero_ils/dojson/: __init__.py  cli.py  utils.py
rero_ils/es_templates/: __init__.py
rero_ils/es_templates/v7/: __init__.py
rero_ils/jsonschemas/: __init__.py  utils.py
rero_ils/modules/: __init__.py  api.py  babel_extractors.py  decorators.py  errors.py  ext.py  extensions.py  fetchers.py  indexer_utils.py  jsonresolver.py  messages.py  minters.py  normalizer_stop_words.py  permissions.py  providers.py  receivers.py  record_extensions.py  tasks.py  utils.py  views.py
rero_ils/modules/acquisition/: __init__.py  api.py  cli.py  dumpers.py  exceptions.py  rollover.py
rero_ils/modules/api_harvester/: __init__.py  api.py  cli.py  errors.py  models.py  tasks.py  utils.py
rero_ils/modules/circ_policies/: __init__.py  api.py  extensions.py  models.py  permissions.py  views.py
rero_ils/modules/cli/: __init__.py  documents.py  fixtures.py  index.py  messages.py  reroils.py  utils.py
rero_ils/modules/collections/: __init__.py  api.py  cli.py  jsonresolver.py  listener.py  models.py  permissions.py  serializers.py  tasks.py  utils.py  views.py
rero_ils/modules/commons/: __init__.py  dumpers.py  exceptions.py  identifiers.py  models.py  schemas.py
rero_ils/modules/deduplications/: __init__.py  api.py
rero_ils/modules/documents/: __init__.py  api.py  api_views.py  jsonresolver.py  models.py  permissions.py  query.py  tasks.py  utils.py  views.py
rero_ils/oauth/: scopes.py
rero_ils/theme/: __init__.py  forms.py  menus.py  views.py  webpack.py
rero_ils/translations/: messages.pot
scripts/: __init__.py  bootstrap  convert_marc21xml.py  create_csvs  cypress  dojson_virtua  load_testing.py  russian_dolls  server  setup  test  update
tests/: __init__.py  conftest.py  test_version.py  thumbnail_test_provider.py  utils.py
tests/api/: __init__.py  conftest.py  test_accounts_rest_auth.py  test_availability.py  test_circ_bug.py  test_commons_api.py  test_concurrent_updates.py  test_exports.py  test_external_services.py  test_monitoring_rest.py  test_pid_rest.py  test_record_permissions.py  test_search.py  test_serializers.py  test_tasks.py  test_translations.py  test_user_authentication.py
tests/api_harvester/: __init__.py  conftest.py  test_cli_api_harvester.py
tests/data/: data.json  mef.json
tests/deduplications/: __init__.py
tests/e2e/: __init__.py  test_front_page.py
tests/fixtures/: __init__.py  acquisition.py  basics.py  circulation.py  mef.py  metadata.py  organisations.py  sip2.py
tests/migrations/: __init__.py  conftest.py
tests/mock_modules/: __init__.py
tests/scheduler/: __init__.py  conftest.py  test_scheduler.py
tests/ui/: conftest.py  test_api.py  test_api_schema.py  test_filters.py  test_indexer_utils.py  test_invenio_celery_tasks_endpoints.py  test_message.py  test_patron_message.py  test_permissions.py  test_ui_schema.py  test_utils_app.py  test_views.py
tests/unit/: __init__.py  conftest.py  test_acq_accounts_jsonschema.py  test_acq_order_lines_jsonschema.py  test_acq_orders_jsonschema.py  test_acq_receipt_lines_jsonschema.py  test_babel_extractors.py  test_budgets_jsonschema.py  test_circ_policies_jsonschema.py  test_cli_fixtures.py  test_cli_index.py  test_cli_utils.py  test_contributions_jsonschema.py  test_cql_parser.py  test_csv.py  test_holdings_jsonschema.py  test_ill_requests_jsonschema.py  test_item_types_jsonschema.py  test_items_jsonschema.py  test_libraries_jsonschema.py  test_local_entities_jsonschema.py  test_local_fields_jsonschema.py  test_locations_jsonschema.py  test_normalizer_stop_words.py  test_notifications_jsonschema.py  test_operation_logs_jsonschema.py  test_organisations_extensions.py  test_organisations_jsonschema.py  test_patron_transaction_events_jsonschema.py  test_patron_transactions_jsonschema.py  test_patron_types_jsonschema.py  test_patrons_jsonschema.py  test_sru_explain.py  test_stats_cfg_jsonschema.py  test_templates_jsonschema.py  test_users_jsonschema.py  test_utils.py  test_vendors_jsonschema.py
(+1001 files in other folders)
